@@ -193,6 +193,16 @@
             <span class="o">-</span><span class="n">d</span><span class="p">,</span> <span class="o">--</span><span class="n">data</span>
                 <span class="n">Show</span> <span class="n">data</span> <span class="n">values</span> <span class="k">for</span> <span class="n">each</span> <span class="n">variable</span><span class="o">.</span>
 
+    <span class="n">harpdump</span> <span class="o">--</span><span class="n">dataset</span> <span class="p">[</span><span class="n">options</span><span class="p">]</span> <span class="o">&lt;</span><span class="n">file</span><span class="o">|</span><span class="nb">dir</span><span class="o">&gt;</span> <span class="p">[</span><span class="o">&lt;</span><span class="n">file</span><span class="o">|</span><span class="nb">dir</span><span class="o">&gt;</span> <span class="o">...</span><span class="p">]</span>
+        <span class="n">Print</span> <span class="n">metadata</span> <span class="k">for</span> <span class="nb">all</span> <span class="n">files</span> <span class="ow">in</span> <span class="n">the</span> <span class="n">dataset</span> <span class="ow">in</span> <span class="n">csv</span> <span class="nb">format</span><span class="o">.</span>
+
+            <span class="o">-</span><span class="n">o</span><span class="p">,</span> <span class="o">--</span><span class="n">options</span> <span class="o">&lt;</span><span class="n">option</span> <span class="nb">list</span><span class="o">&gt;</span>
+                <span class="n">List</span> <span class="n">of</span> <span class="n">options</span> <span class="n">to</span> <span class="k">pass</span> <span class="n">to</span> <span class="n">the</span> <span class="n">ingestion</span> <span class="n">module</span><span class="o">.</span>
+                <span class="n">Only</span> <span class="n">applicable</span> <span class="k">if</span> <span class="n">the</span> <span class="nb">input</span> <span class="n">product</span> <span class="ow">is</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">HARP</span> <span class="nb">format</span><span class="o">.</span>
+                <span class="n">Options</span> <span class="n">are</span> <span class="n">separated</span> <span class="n">by</span> <span class="n">semi</span><span class="o">-</span><span class="n">colons</span><span class="o">.</span> <span class="n">Each</span> <span class="n">option</span> <span class="n">consists</span>
+                <span class="n">of</span> <span class="n">an</span> <span class="o">&lt;</span><span class="n">option</span> <span class="n">name</span><span class="o">&gt;=&lt;</span><span class="n">value</span><span class="o">&gt;</span> <span class="n">pair</span><span class="o">.</span> <span class="n">An</span> <span class="n">option</span> <span class="nb">list</span> <span class="n">needs</span> <span class="n">to</span> <span class="n">be</span>
+                <span class="n">provided</span> <span class="k">as</span> <span class="n">a</span> <span class="n">single</span> <span class="n">expression</span><span class="o">.</span>
+
     <span class="n">harpdump</span> <span class="o">--</span><span class="nb">list</span><span class="o">-</span><span class="n">derivations</span> <span class="p">[</span><span class="n">options</span><span class="p">]</span> <span class="p">[</span><span class="nb">input</span> <span class="n">product</span> <span class="n">file</span><span class="p">]</span>
         <span class="n">List</span> <span class="nb">all</span> <span class="n">available</span> <span class="n">variable</span> <span class="n">conversions</span><span class="o">.</span> <span class="n">If</span> <span class="n">an</span> <span class="nb">input</span> <span class="n">product</span> <span class="n">file</span> <span class="ow">is</span>
         <span class="n">specified</span><span class="p">,</span> <span class="n">limit</span> <span class="n">the</span> <span class="nb">list</span> <span class="n">to</span> <span class="n">variable</span> <span class="n">conversions</span> <span class="n">that</span> <span class="n">are</span> <span class="n">possible</span>
